# Shadow

./: .gitignore  CMakeLists.txt  License.txt  Makefile  README.md
scripts/: Console.ts  MakeCircle.ts
src/: AssetManager.cc  AssetManager.hh  CMakeLists.txt  CallbackStack.hh  CallbackStack.ipp  Circle360.inc  Components.hh  Game.cc  Game.hh  GameObject.cc  GameObject.hh  GameObject.ipp  GameTime.cc  GameTime.hh  Glew.hh  Input.hh  LayerManager.cc  LayerManager.hh  LayerManager.ipp  Math.hh.old  RenderContext.cc  RenderContext.hh  Scene.cc  Scene.hh  TestGame.cc
src/Components/: CMakeLists.txt  Camera.cc  Camera.hh  Component.cc  Component.hh  Material.cc  Material.hh  Material.ipp  Renderer.cc  Renderer.hh  Renderer2D.cc  Renderer2D.hh  Renderer3D.cc  Renderer3D.hh  Script.cc  Script.hh  Transform.cc  Transform.hh  UIElement.cc  UIElement.hh  UIRenderer.cc  UIRenderer.hh
src/Components/UI/: CMakeLists.txt  UIBox.cc  UIBox.hh  UIWindow.cc  UIWindow.hh
src/Graphics/: CMakeLists.txt  FontFace.cc  FontFace.hh  Shader.cc  Shader.hh  Texture.cc  Texture.hh
src/Graphics/Shaders/: All.hh  CMakeLists.txt  Shader.Base.cc  Shader.Base.hh  TextShader.cc  TextShader.hh  UIShader.cc  UIShader.hh
src/Helper/: CMakeLists.txt  CursorManager.cc  CursorManager.hh  Extensions.cc  Extensions.hh  Extensions.ipp  Mesh.cc  Mesh.hh  MeshLoader.hh  StringHelper.cc  StringHelper.hh  UIStack.cc  UIStack.hh
src/Input/: CMakeLists.txt  Input.cc  Input.hh  Keyboard.cc  Keyboard.hh  Mouse.cc  Mouse.hh
src/UI/: CMakeLists.txt  UIContainer.cc  UIContainer.hh  UIControl.cc  UIControl.hh  UIEventManager.cc  UIEventManager.hh  UILayoutEngine.cc  UILayoutEngine.hh  UIRoot.cc  UIRoot.hh  UITheme.cc  UITheme.hh
src/UI/Controls/: CMakeLists.txt  UIBarGraph.cc  UIBarGraph.hh  UIButton.cc  UIButton.hh  UIComboBox.hh  UIComboBox.ipp  UIGroupBox.cc  UIGroupBox.hh  UILabel.cc  UILabel.hh  UIListBox.hh  UIListBox.ipp  UIProgressBar.cc  UIProgressBar.hh  UISlider.cc  UISlider.hh  UISplitHorizontal.cc  UISplitHorizontal.hh  UISplitVertical.cc  UISplitVertical.hh  UIStack.cc  UIStack.hh  UITextBox.cc  UITextBox.hh  UIToggleButton.cc  UIToggleButton.hh  UIWindow.cc  UIWindow.hh
src/UserScripts/: CMakeLists.txt  CameraFreeLook.cc  ObjectKbRotate.cc
